--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,6 @@ markdown: redcarpet
 pygments: true
 baseurl:
 title: Represent
-description: Represent Boundaries is an open-source web API to geographic boundaries (i.e. countries, electoral districts, administrative areas) loaded from shapefiles. Render maps and easily query which boundaries cover your user's location.
+description: "Represent Boundaries is an open-source web API to geographic boundaries (i.e. countries, electoral districts, administrative areas) loaded from shapefiles. Render maps and easily query which boundaries cover your user's location."
 repository_url: https://github.com/opennorth/represent-boundaries/
+email: represent@opennorth.ca
