Remove mentions of Poplus

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
-name: represent.poplus.org
-baseurl: /represent.poplus.org/
-title: Represent
+baseurl: /represent-boundaries-docs
+title: Represent Boundaries
 description: "Represent Boundaries is an open-source web API to geographic boundaries (i.e. countries, electoral districts, administrative areas) loaded from shapefiles. Render maps and easily query which boundaries cover your user's location."
 repository_url: https://github.com/opennorth/represent-boundaries/
 email: represent@opennorth.ca
